--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,22 +3,22 @@ events {
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+    include mime.types;
+    default_type application/octet-stream;
 
-    sendfile        on;
-    keepalive_timeout  65;
+    sendfile on;
+    keepalive_timeout 65;
 
     server {
-        listen       ${PORT};
-        server_name  localhost;
+        listen ${PORT};
+        server_name localhost;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            root /usr/share/nginx/html;
+            index index.html index.htm;
         }
 
-        location /ssh.io/ {
+        location /database.io/ {
             proxy_pass http://127.0.0.1:8081;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -31,7 +31,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /database.io/ {
+        location /ssh.io/ {
             proxy_pass http://127.0.0.1:8082;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -44,9 +44,48 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        error_page   500 502 503 504  /50x.html;
+        location /rdp.io/ {
+            proxy_pass http://127.0.0.1:8083;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /vnc.io/ {
+            proxy_pass http://127.0.0.1:8084;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /sftp.io/ {
+            proxy_pass http://127.0.0.1:8085;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        error_page 500 502 503 504 /50x.html;
         location = /50x.html {
-            root   /usr/share/nginx/html;
+            root /usr/share/nginx/html;
         }
     }
 }
