--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -88,7 +88,7 @@ RUN chown -R node:node /app
 
 VOLUME ["/app/data"]
 # Expose ports - web (dynamic port from ENV), ssh backend, db backend
-EXPOSE ${PORT} 8081 8082
+EXPOSE ${PORT} 8081 8082 8083 8084 8085
 
 COPY docker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
