--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
