--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.7.3",
     "react-resizable-panels": "^3.0.3",
+    "react-responsive": "^10.0.1",
     "react-xtermjs": "^1.0.10",
     "sonner": "^2.0.7",
     "speakeasy": "^2.0.0",
