--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
     "ws": "^8.18.3",
+    "xterm": "^5.3.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
