--- a/package.json
+++ b/package.json
@@ -1,29 +1,15 @@
 {
   "name": "termix",
   "private": true,
-  "version": "1.6.0",
-  "description": "Open-source server management platform with SSH terminal access, tunnel management, and file editing",
-  "author": {
-    "name": "LukeGus",
-    "email": "support@termix.site"
-  },
+  "version": "0.0.0",
   "type": "module",
-  "main": "electron/main-simple.cjs",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm run build:backend",
-    "build:frontend": "vite build",
+    "build": "vite build",
     "build:backend": "tsc -p tsconfig.node.json",
     "dev:backend": "tsc -p tsconfig.node.json && node ./dist/backend/starter.js",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "electron": "electron .",
-    "electron:dev": "npm run build:backend && NODE_ENV=development electron .",
-    "electron:package": "npm run build && electron-packager . Termix --platform=win32 --arch=x64 --out=release --overwrite --ignore=\"^/src|^/public|^/node_modules|^/repo-images\" --prune=true --icon=public/favicon.ico",
-    "electron:package:win": "npm run build && electron-packager . Termix --platform=win32 --arch=x64 --out=release --overwrite --ignore=\"^/src|^/public|^/node_modules|^/repo-images\" --prune=true --icon=public/favicon.ico",
-    "electron:package:mac": "npm run build && electron-packager . Termix --platform=darwin --arch=universal --out=release --overwrite --ignore=\"^/src|^/public|^/node_modules|^/repo-images\" --prune=true --icon=public/icon.png",
-    "electron:package:linux": "npm run build && electron-packager . Termix --platform=linux --arch=x64 --out=release --overwrite --ignore=\"^/src|^/public|^/node_modules|^/repo-images\" --prune=true --icon=public/icon.png",
-    "electron:package:all": "npm run build && npm run electron:package:win && npm run electron:package:mac && npm run electron:package:linux"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -44,6 +30,11 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^2.0.0",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "@uiw/codemirror-extensions-hyper-link": "^4.24.1",
     "@uiw/codemirror-extensions-langs": "^4.24.1",
     "@uiw/codemirror-themes": "^4.24.1",
@@ -82,43 +73,34 @@
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.7.3",
     "react-resizable-panels": "^3.0.3",
-    "react-responsive": "^10.0.1",
     "react-simple-keyboard": "^3.8.120",
     "react-xtermjs": "^1.0.10",
     "sonner": "^2.0.7",
     "speakeasy": "^2.0.0",
     "ssh2": "^1.16.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "validator": "^13.15.15",
     "ws": "^8.18.3",
-    "xterm": "^5.3.0",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
-    "@tailwindcss/vite": "^4.1.12",
-    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
-    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@types/speakeasy": "^2.0.10",
     "@types/ssh2": "^1.15.5",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.21",
-    "electron": "^31.7.0",
-    "electron-packager": "^17.1.2",
     "eslint": "^9.34.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "tailwindcss": "^4.1.12",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.9.2",
