--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "termix",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.6.0",
+  "description": "A web-based server management platform with SSH terminal, tunneling, and file editing capabilities",
+  "author": "Karmaa",
+  "main": "electron/main-simple.cjs",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +12,12 @@
     "build:backend": "tsc -p tsconfig.node.json",
     "dev:backend": "tsc -p tsconfig.node.json && node ./dist/backend/backend/starter.js",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron": "electron .",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron:build": "npm run build && npm run build:backend && electron-builder --dir",
+    "electron:build-win": "npm run build && npm run build:backend && electron-builder --win --dir",
+    "electron:pack": "npm run build && npm run build:backend && electron-packager . Termix --platform=all --arch=x64,arm64 --out=release --overwrite"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -97,6 +105,10 @@
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.1",
+    "electron": "^38.0.0",
+    "electron-builder": "^26.0.12",
+    "electron-packager": "^17.1.2",
     "eslint": "^9.34.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -105,6 +117,7 @@
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
-    "vite": "^7.1.5"
+    "vite": "^7.1.5",
+    "wait-on": "^8.0.4"
   }
 }
