--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -63,6 +63,25 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Electron OIDC success/error handlers
+        location /electron-oidc-success {
+            proxy_pass http://127.0.0.1:8081;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /electron-oidc-error {
+            proxy_pass http://127.0.0.1:8081;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location /ssh/ {
             proxy_pass http://127.0.0.1:8081;
             proxy_http_version 1.1;
